correction to align form fields

--- a/public/css/perso.css
+++ b/public/css/perso.css
@@ -6,3 +6,22 @@
   border-radius: 10px;
   box-shadow: 0 0 1em;	
 }
+select,
+textarea,
+input[type="text"],
+input[type="password"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="date"],
+input[type="month"],
+input[type="time"],
+input[type="week"],
+input[type="number"],
+input[type="email"],
+input[type="url"],
+input[type="search"],
+input[type="tel"],
+input[type="color"],
+.uneditable-input {
+  margin: 0;
+}
